# knot

./: .eslintrc.cjs  .gitignore  AGENTS.md  BUILD_SUCCESS.md  CHANGELOG.md  LICENSE-APACHE  LICENSING.md  PROJECT_SETUP.md  PROJECT_STATUS.md  README.md  TYPESCRIPT_TESTS_SUMMARY.md  VERIFICATION_REPORT.md  index.html  package-lock.json  package.json  playwright.browser.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
.githooks/: pre-commit  pre-push
.mcp/: knotd-mcp.example.json  storybook-mcp.example.json
.storybook/: main.ts  preview.ts
docs/: FRONTEND_API.md  FRONTEND_COMPLETE.md  PRIORITY_1_IMPLEMENTATION_SUMMARY.md  PROJECT_STATE.md  REFACTORING_LIBVAULT.md  REFACTORING_SUMMARY.md  RELEASE_NOTES-2026-02-21.md  UI_LAYOUT_CHANGES_SUMMARY.md  VAULT_UI_IMPLEMENTATION_SUMMARY.md
scripts/: check-coverage-thresholds.mjs  create-deb-packages.sh  create-deb-source.sh  create-local-tarball.sh  create-self-extracting-installer.sh  dev-down.sh  dev-up.sh  install-githooks.sh  (+30 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_command.rs  app_config.rs  config.rs  db.rs  debug.rs  error.rs  event_log.rs  graph.rs  ipc.rs  knotd_client.rs  launcher.rs  lib.rs  main.rs  markdown.rs  mcp.rs  note.rs  note_type.rs  recent_vaults.rs  search.rs  state.rs  ui_automation.rs  vault.rs  watcher.rs  youtube.rs
src-tauri/src/commands/: mod.rs  notes.rs  search.rs  ui_automation.rs  vault.rs
src-tauri/src/core/: mod.rs  vault.rs
src-tauri/src/plugin/: host.rs  manifest.rs  mod.rs  runtime.rs
src-tauri/src/runtime/: mod.rs
src-tauri/tests/: app_keymap_config_test.rs  ipc_concurrency_test.rs  ipc_recovery_test.rs  watcher_integration_test.rs
(+548 files in other folders)
